Version-Update E-PIX v2024.3.0